# r2mo-obsidian

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  dev-build.sh  dev-start.sh  dev-stop.sh  opencode.json
.claude/: settings.local.json
.codex/: config.toml
.github/workflows/: cross-build-and-gitee-release.yml  gitee-release-ci.yml  release-smoke.yml  task-002-validation.yml
.omc/: project-memory.json
.omc/sessions/: 28d37b03-491f-4af2-b1b6-f84abae1db94.json  437575bd-32e0-4b70-9dbc-6e19c1480a43.json
.omc/state/: hud-stdin-cache.json
.opencode/: opencode.json
.r2mo/: mimo_v25_pro_benchmark_report.md  任务数据库.base
.r2mo/task/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-009.md  task-010.md  task-012.md
build-release/.lupdate/: ObsidianManager_lupdate_project.cmake
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/ObsidianManager_autogen/: deps  mocs_compilation.cpp
dist-gitee-v1.0.3/: upload-ObsidianManager-linux-arm64.tar.gz.json  upload-ObsidianManager-linux-x64.tar.gz.json  upload-ObsidianManager-macos-arm64.zip.json  upload-ObsidianManager-macos-x64.zip.json  upload-ObsidianManager-windows-x64.zip.json
docs/: task-002-validation.md
scripts/: release_gitee.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/fonts/: fonts.qrc
test/: codex-haiku-agent.md  codex-opus-agent.md  codex-sonnet-agent.md  haiku-agent.md  opus-agent.md  sonnet-agent.md
tests/: memory_footprint_guard_test.sh  min_font_size_test.sh  monitor_refresh_loading_test.sh  task_001_local_claude_subagent_guard_test.sh  task_001_monitor_grid_guard_test.sh  task_001_opencode_freshness_guard_test.sh  task_001_remote_claude_session_assignment_guard_test.sh  task_001_remote_dedupe_guard_test.sh  task_001_remote_monitor_session_test.sh  task_001_remote_repository_guard_test.sh  task_001_status_semantics_guard_test.sh  task_001_ui_bug_guard_test.sh  task_002_codex_assignment_priority_guard_test.sh  task_002_codex_midturn_guard_test.sh  task_002_codex_status_guard_test.sh  task_002_local_monitor_path_guard_test.sh  task_002_local_opencode_status_guard_test.sh  task_002_monitor_incremental_fill_test.sh  task_002_monitor_layout_height_test.sh  task_002_monitor_refresh_cadence_test.sh  task_002_monitor_registered_projects_only_test.sh  task_002_monitor_runtime_display_guard_test.sh  task_002_monitor_status_test.sh  task_002_opencode_session_guard_test.sh  task_002_opencode_status_guard_test.sh  task_002_parallel_inline_refresh_test.sh  task_002_remote_claude_path_guard_test.sh  task_002_remote_opencode_artifact_fallback_test.sh  task_002_remote_process_root_guard_test.sh  task_002_remote_repository_selector_guard_test.sh  task_002_remote_status_guard_test.sh  task_002_special_monitor_refresh_test.sh  task_002_strict_validation_test.sh  task_002_terminal_icon_guard_test.sh  task_002_validation_build_suite.sh  task_002_validation_guard_suite.sh  task_002_validation_local_suite.sh  task_002_validation_remote_suite.sh  task_003_claude_ready_freshness_guard_test.sh  task_003_special_monitor_cache_guard_test.sh  (+3 more)
translations/: obsidianmanager_en_US.ts  obsidianmanager_zh_CN.ts
(+69 files in other folders)
